# ChangeLog for dev-ruby/metric_fu
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Feb 2010; Hans de Graaff <graaff@gentoo.org> -metric_fu-1.1.6.ebuild,
  -metric_fu-1.1.6-r1.ebuild:
  Remove old versions.

*metric_fu-1.2.0 (15 Jan 2010)

  15 Jan 2010; Hans de Graaff <graaff@gentoo.org> +metric_fu-1.2.0.ebuild:
  Version bump.

*metric_fu-1.1.6-r1 (30 Dec 2009)

  30 Dec 2009; Hans de Graaff <graaff@gentoo.org> +metric_fu-1.1.6.ebuild,
  +metric_fu-1.1.6-r1.ebuild, +metadata.xml:
  Also install vendored code since metric_fu is hardcoded to use that.

*metric_fu-1.1.6 (28 Dec 2009)

  28 Dec 2009; Hans de Graaff <graaff@gentoo.org> +metric_fu-1.1.6.ebuild,
  +metadata.xml:
  Initial import.
