@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST metric_fu-1.2.0.gem 136192 RMD160 64f9549b59497f88ce26f0a723471b170ea35c70 SHA1 5a507390dbaadfe9a67f7b0f88b30876cfcbd697 SHA256 a979f64e6dd163c8ac27f51e2984914a8150dbad0fb400b7f65e7b90fa312bf0
+DIST metric_fu-1.3.0.gem 90112 RMD160 2abeff216dafc908b4ab817ca4c61d48750b59c1 SHA1 846b59ae8d4b920a21a953aee815b65c89f07f95 SHA256 3b4d96c2a01705b1a6ee70d8b530750cd93fac3305d24549abf69286f950dfe9
 EBUILD metric_fu-1.2.0.ebuild 843 RMD160 253fbc0a92f90a7585a7c3b997ed46773d53eadc SHA1 7377f82f698b4b414e8599c8937d844af6639495 SHA256 571972f28a45c30ddfd92293ffb4a11abee0cbcef026cc242ff2709513acc8d8
-MISC ChangeLog 742 RMD160 d8f2aedbbf9bd8923f8f07b31a4dd2f3ec99f4c3 SHA1 d597bf9ae5d75cff3a76bfe7351e734cb2619c5c SHA256 cfa68ddb01c2b2a3e1542c0a9f06fda561198231e3211ea878871c2d294ebaa2
+EBUILD metric_fu-1.3.0.ebuild 964 RMD160 61337934fecd57b1f58ea2b365b5dcb3d5da192b SHA1 7be16f900b4d64932d0bf062819247f968750f16 SHA256 ee7e5e09263530e3f2f1f10c12d871ed2d8cf93855a5e0df90bd253d3233e337
+MISC ChangeLog 888 RMD160 d212bb4b0fd58a0a020a0b9b778cd037a9bb90d4 SHA1 be94a023948f1770f8d42789b0b19324a3abf5eb SHA256 586ebb516913194f90e5aca5b7b451ea6ab0e95c13e7e498886152f06f230046
 MISC metadata.xml 215 RMD160 682b22c57f2f17c789b244e2bb32fe15ca3fa332 SHA1 ccf017e39c3f44ac4b557da94f91096555cb1be2 SHA256 c058515dd6264789274b580e999ce4fbbb5c53c36a452bf7b32fd227980abcf8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkt1M0oACgkQeM7EJeUH71PfnwCfZOwvkkqVw4a4UGHhWQYNK5Id
-qycAn0BYyeWIGbLFLzMgBFzlpOiln0OD
-=oW9Y
+iEYEARECAAYFAkt1UMgACgkQeM7EJeUH71OFuwCfaL8kWzvjAAbeCmD6RIvt+PB5
+YCsAn0BzdCrxvYwSHDwI2lV6YoKHG6Ad
+=KV9M
 -----END PGP SIGNATURE-----
