@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*metric_fu-1.3.0 (12 Feb 2010)
+
+  12 Feb 2010; Hans de Graaff <graaff@gentoo.org> +metric_fu-1.3.0.ebuild:
+  Version bump with new dependencies.
+
   12 Feb 2010; Hans de Graaff <graaff@gentoo.org> -metric_fu-1.1.6.ebuild,
   -metric_fu-1.1.6-r1.ebuild:
   Remove old versions.
